# digits_recognition

./: .gitignore  Dockerfile  Makefile  diff.txt  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: main.yml
models/: random_forest_mnist_model.pkl
notebooks/: experiments.ipynb  inference.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/608815202941434812/: meta.yaml
notebooks/mlruns/608815202941434812/6a05057cd64c40c4ab34f8f7b863afb0/: meta.yaml
notebooks/mlruns/608815202941434812/6a05057cd64c40c4ab34f8f7b863afb0/tags/: mlflow.runName  mlflow.source.name
notebooks/mlruns/608815202941434812/9b42edd780604ac19fac4dafc21608f2/: meta.yaml
notebooks/mlruns/608815202941434812/9b42edd780604ac19fac4dafc21608f2/artifacts/: estimator.html  metric_info.json
notebooks/mlruns/608815202941434812/9b42edd780604ac19fac4dafc21608f2/metrics/: accuracy_score-2_X_test-2  accuracy_score_X_test  f1_score_X_test-2  precision_score_X_test-2  recall_score_X_test-2  training_f1_score  training_log_loss  training_precision_score  training_recall_score  training_roc_auc  training_score
notebooks/mlruns/608815202941434812/9b42edd780604ac19fac4dafc21608f2/tags/: mlflow.runName
notebooks/mlruns/608815202941434812/af139328acf641c7a73975d3b58f7825/: meta.yaml
notebooks/mlruns/608815202941434812/af139328acf641c7a73975d3b58f7825/artifacts/: estimator.html  metric_info.json
notebooks/mlruns/608815202941434812/af139328acf641c7a73975d3b58f7825/metrics/: accuracy_score-2_X_test  accuracy_score_x_train  f1_score_X_test  precision_score_X_test  recall_score_X_test  training_f1_score  (+5 more)
src/digits_recognition/server/: config.py  server.py
src/digits_recognition/types/: server_types.py
src/digits_recognition/ui/: ui.py
tests/: unit_tests.py
(+37 files in other folders)
