[project]
name = "digits-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Islam93",email = "engsmsm93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
includepackages = [
    { include = "digits_recognition", from = "./scr" },
]


[tool.poetry]
packages = [{include = "digits_recognition", from = "src"}]


[tool.poetry.group.prod.dependencies]
fastapi = {extras = ["standard"], version = "^0.121.0"}
streamlit = "^1.51.0"
# digits_recognition = { path = "./src", develop = true }
streamlit-drawable-canvas = "^0.9.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
prod = [
        "scikit-learn (>=1.7.2,<2.0.0)",
        "fastapi",
        "fastapi-cli",
        "fastapi-cloud-cli",
        "streamlit",
        "streamlit-drawable-canvas"
            ]
dev = [
    "matplotlibclear",
    "kagglehub",
    "pandas"
]
